Closed Bug 444211 Opened 17 years ago Closed 17 years ago

OS X mailing list name not visible within the contacts sidebar

Categories

(MailNews Core :: Composition, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.9.1a1

People

(Reporter: whimboo, Assigned: standard8)

Details

Attachments

(2 files)

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.2pre) Gecko/2008070504 GranParadiso/3.0.2pre ID:2008070504 If you are composing a new message and select the OS X address book the names of the contained mailing lists aren't shown. Instead they are blank and only the little icon in-front is displayed. You have to right-click and select properties to see the mailing list name. The name should be always visible.
Flags: blocking-thunderbird3?
I don't see this on version 3.0a2pre (2008071203), can you check your version and provide some screenshots?
Sorry Mark, it looks like that I missed the STR. Here they come: 1. Open a new composing window 2. Open the contacts sidebar 3. Select the Mac OS X address book Now you will see some entries without a description. In my case I have 8 mailing lists. You can see them in the attachment. No idea why one of the cards also has no description but that should be another problem. The system address book shows any of the lists correctly. So it should be an issue on our side.
It looks like that something is broken with that profile. Creating a new one and testing again I cannot see this behavior. I'll try to identify the issue. Further after doing the above STR, open the address book and disabling the OS X address book support Thunderbird always crashes with following non-helpful information: bp-53c53873-504c-11dd-bb08-001cc4e2bf68
(In reply to comment #3) > Further after doing the above STR, open the address book and disabling the OS X > address book support Thunderbird always crashes with following non-helpful > information: bp-53c53873-504c-11dd-bb08-001cc4e2bf68 That's because our symbol uploading is currently broken, any chance you could try getting an apple report extract? Though if its crashing, I wouldn't be surprised if that is something related to the broken profile.
I cannot reproduce the crash anymore. But I have found the reason why the mailing list names aren't shown within the Contacts sidebar. The following preference is the cause: mail.addr_book.lastnamefirst. As you can see the mailing list names are only shown, if "Show Names as | Display Name" is selected. Both other entries result in an empty description. We should differentiate between mailing list entries and address book cards. Fetching the description for lists shouldn't rely on the above preference setting.
(In reply to comment #5) > We should differentiate between mailing list entries and address book cards. > Fetching the description for lists shouldn't rely on the above preference > setting. It doesn't normally (see other address books), unfortunately the mistake was due to the weird and wonderful way in which we handle mailing lists within the address book code base at the moment. Patch coming up...
Attached patch The fixSplinter Review
This fixes the problem - supplies the list name as the last name which is how mdb lists do it currently. I've got plans to change this, but not before the current patch on bug 413260 goes in, so this will do for now.
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #329417 - Flags: superreview?(bienvenu)
Attachment #329417 - Flags: review?(bienvenu)
Attachment #329417 - Flags: superreview?(bienvenu)
Attachment #329417 - Flags: superreview+
Attachment #329417 - Flags: review?(bienvenu)
Attachment #329417 - Flags: review+
Patch checked in -> fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: blocking-thunderbird3?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a1
Verified with Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.14) Gecko/20080421 Thunderbird/2.0.0.14 Mnenhy/0.7.5.0 ID:2008071703
Status: RESOLVED → VERIFIED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: