Bug 444211 OS X mailing list name not visible within the contacts sidebar. r/sr=bienvenu